--- a/styles/testimonials-media-queries.css
+++ b/styles/testimonials-media-queries.css
@@ -965,7 +965,7 @@ Text/Margin Scale:
   .subheading,
   .initials,
   .testimonial-author {
-    font-size: 2.3rem;
+    font-size: 2rem;
   }
 
   .testimonial {
